<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/identify_the_car_make"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="250dp"
        android:layout_height="41dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/button"
        android:ellipsize="none"
        android:onClick="openRandomImageActivity"
        android:shape="oval"
        android:text="@string/identify_the_car_make"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hints"
        android:layout_width="250dp"
        android:layout_height="41dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button"
        android:onClick="openHintActivity"
        android:text="@string/hints"
        android:textAllCaps="false"
        android:textColor="#0E0E0E"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify_the_car_make" />

    <Button
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:onClick="openClickableImageActivity"
        android:text="@string/identify_the_car_image"
        android:textAllCaps="false"
        android:textColor="#121111"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="250dp"
        android:layout_height="41dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button"
        android:onClick="openAdvancedLevelActivity"
        android:text="@string/advanced_level"
        android:textAllCaps="false"
        android:textColor="#100F0F"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.007" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:checked="false"
        android:onClick="onSwitchButtonClick"
        android:shadowColor="#FFFFFF"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Display4"
        android:text="@string/timer_label_text"
        android:textColor="#FFF6F6"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
</androidx.constraintlayout.widget.ConstraintLayout>